<resources>
    <string name="app_name">B07 Project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="logo_content_description">Logo of University of Toronto Scarborough</string>

    <!-- Front page -->
    <string name="front_page_admin_login">Admin</string>
    <string name="front_page_student_login">Student</string>
    <string name="front_page_signup">Sign Up</string>
    <string name="front_page_title">Course Manager</string>

    <!-- Student Login page -->
    <string name="student_login_submit_text">Login</string>

    <!-- Student registration page  -->
    <string name="student_signup_submit_text">Finish</string>

    <!-- Admin course add page -->
    <string name="admin_course_add_header">Course Info:</string>
    <string name="admin_course_add_name_hint">Enter course name</string>
    <string name="admin_course_add_code_hint">Enter course code</string>
    <string name="admin_course_add_prerequisites_hint">Select prerequisites</string>
    <string name="admin_course_add_offering_sessions_header">Offering Sessions:</string>
    <string name="admin_course_add_fall">Fall</string>
    <string name="admin_course_add_winter">Winter</string>
    <string name="admin_course_add_summer">Summer</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="utsc_logo">UTSC Logo</string>
    <string name="course_codes">Course Codes:</string>
    <string name="course_offering">Course Offering</string>
    <string name="academic_history">Academic History</string>
    <string name="course_taken">Course Taken:</string>


</resources>