<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adminAddCourseConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    tools:context=".AdminCourseAdd">

    <!-- TODO: Update blank fragment layout -->

    <ImageButton
        android:id="@+id/adminCourseAddBackButton"
        android:layout_width="31dp"
        android:layout_height="49dp"
        android:background="@color/uoft_blue"
        android:contentDescription="return"
        android:src="@drawable/abc_vector_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/adminAddCourseLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/courseInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_textview"
            android:text="@string/admin_course_add_header"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="325dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:showDividers="middle|beginning">

            <EditText
                android:id="@+id/adminAddCourseCodeInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/admin_course_add_code_hint"
                android:inputType="textPersonName"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/adminAddCourseNameInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/admin_course_add_name_hint"
                android:inputType="textPersonName"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/adminCourseAddPrereqButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admin_course_add_prerequisites_hint"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/uoft_blue"
                android:textSize="20sp"
                app:backgroundTint="@color/white"
                app:cornerRadius="100dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_edittext"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/admin_course_add_offering_sessions_header"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <CheckBox
                        android:id="@+id/adminAddCourseFallCheckbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/admin_course_add_fall" />

                    <CheckBox
                        android:id="@+id/adminAddCourseWinterCheckbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/admin_course_add_winter" />

                    <CheckBox
                        android:id="@+id/adminAddCourseSummerCheckbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/admin_course_add_summer" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/adminAddCourseSubmitButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/rounded_button_background"
        android:scaleType="fitCenter"
        android:src="@drawable/add_course"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminAddCourseLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>