<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adminAddCourseConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/adminCourseEditBackButton"
        android:layout_width="54dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:drawableBottom="@drawable/arrow_left"
        app:backgroundTint="@color/white"
        app:cornerRadius="100dp"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/adminAddCourseLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/courseInfoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_textview"
            android:text="Edit Course"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="325dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:showDividers="middle|beginning">

            <EditText
                android:id="@+id/adminEditCourseCodeInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/white_rounded_edittext"
                android:ems="10"
                android:hint="@string/admin_course_add_code_hint"
                android:inputType="textPersonName"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/adminEditCourseNameInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/white_rounded_edittext"
                android:ems="10"
                android:hint="@string/admin_course_add_name_hint"
                android:inputType="textPersonName"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/adminCourseEditPrereqButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admin_course_add_prerequisites_hint"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/uoft_blue"
                android:textSize="20sp"
                app:backgroundTint="@color/white"
                app:cornerRadius="100dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/white_rounded_edittext"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/admin_course_add_offering_sessions_header"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <CheckBox
                        android:id="@+id/adminEditCourseFallCheckbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/admin_course_add_fall"
                        app:buttonTint="@color/uoft_blue" />

                    <CheckBox
                        android:id="@+id/adminEditCourseWinterCheckbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/admin_course_add_winter"
                        app:buttonTint="@color/uoft_blue" />

                    <CheckBox
                        android:id="@+id/adminEditCourseSummerCheckbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/admin_course_add_summer"
                        app:buttonTint="@color/uoft_blue" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/adminEditCourseSubmitButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/rounded_button_background"
        android:scaleType="fitCenter"
        android:src="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminAddCourseLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>