<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/frameLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/uoft_blue"
tools:context=".StudentFrontPage">

<!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="329dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/utsc_logo"
        android:src="@drawable/utsclogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:contentDescription="@string/logo_content_description" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="51dp"
        android:background="@color/uoft_blue"
        android:contentDescription="return"
        android:src="@drawable/abc_vector_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/student_login_submit"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/password_icon"
        android:paddingLeft="45dp"
        android:text="@string/student_login_submit_text"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_password_input" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="288.8dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_rounded_edittext"
        android:gravity="center"
        android:paddingRight="15dp"
        android:text="Student Login"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/student_password_input"
        android:layout_width="288.8dp"
        android:layout_height="48dp"
        android:background="@drawable/white_rounded_edittext"
        android:ems="10"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:textSize="20sp" />

    <EditText
        android:id="@+id/student_email_address_input"
        android:layout_width="288.8dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/white_rounded_edittext"
        android:ems="10"
        android:hint="Enter Email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/student_password_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>