<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uoft_blue"
    tools:context=".StudentFrontPage">

    <!-- TODO: Update blank fragment layout -->

    <ImageButton
        android:id="@+id/back_button_2"
        android:layout_width="40dp"
        android:layout_height="51dp"
        android:background="@color/uoft_blue"
        android:src="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/front_page_title"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:dividerPadding="50sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/student_signup_email_address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="@color/button_tint"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/student_signup_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="34sp"
            android:layout_marginBottom="10sp"
            android:background="@color/button_tint"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="34sp" />

        <Button
            android:id="@+id/student_signup_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_signup_submit_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:backgroundTint="@color/button_tint" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="312dp"
        android:layout_height="213dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/utsclogo"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:contentDescription="@string/logo_content_description" />

</androidx.constraintlayout.widget.ConstraintLayout>